# fred-libfred

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CMakeLists.cmake  CMakeLists.txt  ChangeLog.md  ChangeLog.rst  Makefile.am  README.md  README.rst  config.h.cmake  configure.ac  dependencies.txt  fred.pc.in  libfred.cc  libfred.conf.example
src/util/: util.cc  (+27 more)
test/: CMakeLists.txt
test/fake-src/util/cfg/: config_handler.hh  config_handler_decl.hh  faked_args.hh  handle_args.hh  handle_database_args.hh  handle_general_args.hh  handle_logging_args.hh  handle_tests_args.hh
test/libfred/: enum_to_db_handle_conversion.hh  main.cc  test_check_handle.cc  test_flagset.cc  test_opexception.cc
test/libfred/contact/: fixture.hh  test_contact_history.cc  test_contact_state.cc  test_contact_status.cc  test_copy_contact.cc  test_create_contact.cc  test_delete_contact.cc  test_info_contact.cc  test_merge_contact.cc  test_merge_contact_fixture.hh  test_transfer_contact.cc  test_undisclose_address.cc  test_update_contact.cc  util.hh
test/libfred/contact/verification/: setup_utils.cc  setup_utils.hh  test_create_check.cc  test_create_test.cc  test_django_email_format_check.cc  test_info_check.cc  test_list_checks.cc  test_list_enum_objects.cc  test_update_check.cc  test_update_test.cc  util.cc  util.hh
test/libfred/domain/: test_check_domain.cc  test_create_domain.cc  test_create_domain_name_blacklist_id.cc  test_delete_domain.cc  test_domain_name.cc  test_info_domain.cc  test_renew_domain.cc  test_transfer_domain.cc  test_update_domain.cc
test/libfred/keyset/: test_delete_keyset.cc  test_info_keyset.cc  test_transfer_keyset.cc  test_update_keyset.cc
test/libfred/notifier/: test_enqueue_notification.cc  test_event_on_object_enum.cc  test_gather_email_addresses_domain_transfer.cc  test_gather_email_addresses_domain_update.cc  test_gather_email_addresses_keyset_create.cc  test_gather_email_addresses_keyset_transfer.cc  test_gather_email_addresses_keyset_update.cc  test_gather_email_addresses_nsset_transfer.cc  test_gather_email_addresses_nsset_update.cc  test_gather_email_content_contact_update.cc  test_gather_email_content_domain_transfer.cc  test_gather_email_content_domain_update.cc  test_gather_email_content_keyset_update.cc  test_gather_email_content_nsset_update.cc  test_process_one_notification_request.cc  util.hh
test/libfred/nsset/: test_delete_nsset.cc  test_info_nsset.cc  test_transfer_nsset.cc  test_update_nsset.cc
test/libfred/object/: test_generate_authinfo_password.cc  test_generated_authinfo_password.cc  test_registry_object_type.cc  test_transfer_object.cc
test/libfred/object_state/: test_cancel_object_state_request_id.cc  test_create_admin_object_block_request_id.cc  test_create_admin_object_state_restore_request_id.cc  test_create_object_state_request_id.cc  test_object_state.cc
test/libfred/poll/: test_create_delete_contact_poll_message.cc  test_create_delete_domain_poll_message.cc  test_create_state_messages.cc  test_create_update_object_poll_message.cc
test/libfred/public_request/: test_create_public_request.cc  test_create_public_request_auth.cc  test_update_public_request.cc
test/libfred/random/: mock_engine.cc  mock_engine.hh  mock_seeder.hh  test_random.cc
test/libfred/registrar/: test_create_registrar.cc  test_get_registrar_zone_credit.cc  test_info_registrar.cc  test_registrar_zone_access.cc  test_update_registrar.cc  util.hh
test/libfred/registrar/certification/: test_create_registrar_certification.cc  test_get_registrar_certifications.cc  test_update_registrar_certification.cc
test/libfred/registrar/credit/: test_create_registrar_credit_transaction.cc
test/libfred/registrar/epp_auth/: test_delete_registrar_epp_auth.cc  test_update_registrar_epp_auth.cc  util.cc
test/libfred/registrar/group/: test_cancel.cc  test_create.cc  test_get.cc  test_update.cc
test/libfred/registrar/zone_access/: test_add_zone_access.cc  test_update_zone_access.cc  util.hh
test/libfred/zone/: test_create_zone.cc  test_info_zone.cc  test_update_zone.cc  util.hh
test/libfred/zone/zone_ns/: test_create_zone_ns.cc  test_info_zone_ns.cc  test_update_zone_ns.cc
test/libfred/zone/zone_soa/: test_create_zone_soa.cc  test_info_zone_soa.cc  test_update_zone_soa.cc  util.hh
test/setup/: fixtures.cc  fixtures.hh  fixtures_utils.cc  fixtures_utils.hh
test/test/libfred/: main.cc  test_check_handle.cc  test_flagset.cc  test_opcontext_by_libpg.cc  test_opexception.cc
test/test/libfred/contact/: test_contact_history.cc  test_contact_state.cc  test_copy_contact.cc  test_create_contact.cc  test_delete_contact.cc  test_info_contact.cc  test_merge_contact.cc  test_transfer_contact.cc  test_undisclose_address.cc  test_update_contact.cc
test/test/libfred/domain/: test_check_domain.cc  test_create_domain.cc  test_create_domain_name_blacklist_id.cc  test_delete_domain.cc  test_domain_name.cc  test_info_domain.cc  test_renew_domain.cc  test_transfer_domain.cc  test_update_domain.cc
test/test/libfred/keyset/: test_delete_keyset.cc  test_info_keyset.cc  test_transfer_keyset.cc  test_update_keyset.cc
test/test/libfred/notifier/: fixture_data.hh  test_enqueue_notification.cc  test_event_on_object_enum.cc  test_gather_email_addresses_contact_create.cc  test_gather_email_addresses_contact_delete.cc  test_gather_email_addresses_contact_transfer.cc  test_gather_email_addresses_contact_update.cc  test_gather_email_addresses_domain_create.cc  test_gather_email_addresses_domain_delete.cc  test_gather_email_addresses_domain_renew.cc  test_gather_email_addresses_domain_transfer.cc  test_gather_email_addresses_domain_update.cc  test_gather_email_addresses_keyset_create.cc  test_gather_email_addresses_keyset_delete.cc  test_gather_email_addresses_keyset_transfer.cc  util.hh  (+23 more)
test/test/setup/: arguments.cc  cfg.cc  cfg.hh  fixtures.cc  fixtures_utils.cc  run_in_background.cc  test_tree_list.cc
test/test/util/: test_case_insensitive.cc  test_db.cc  test_password_storage.cc
test/util/: test_case_insensitive.cc  test_password_storage.cc  test_password_storage_main.cc
(+836 files in other folders)
